sdk/metask/agentcore.h

/* ABI v1 is experimental; the 2026-07-17 freeze was retracted (see
 * doc/AGENTCORE_BINARY_ABI.md Status). Re-freezing is gated on the open items
 * in doc/AGENTCORE_V1_EXPERIMENTAL_LEDGER.md plus a reference-closure audit
 * and a real-consumer gate. No stability promise: layouts and semantics may
 * change incompatibly between commits. Pin an exact bundle; its manifest
 * records the commit. */
#define METASK_AGENTCORE_ABI_V1 1u
#define METASK_AGENTCORE_ABI_REVISION 5u
#define METASK_AGENTCORE_STATUS_OK 0u
#define METASK_AGENTCORE_STATUS_INVALID_ARGUMENT 1u
#define METASK_AGENTCORE_STATUS_OUT_OF_MEMORY 2u
#define METASK_AGENTCORE_STATUS_BUSY 3u
#define METASK_AGENTCORE_STATUS_STALE_RUN 4u
#define METASK_AGENTCORE_STATUS_TOO_LATE 5u
#define METASK_AGENTCORE_STATUS_INVALID_STATE 6u
#define METASK_AGENTCORE_STATUS_CORE_ERROR 7u
#define METASK_AGENTCORE_STATUS_CALLBACK_FAILED 8u
#define METASK_AGENTCORE_STATUS_INTERNAL_ERROR 9u
#define METASK_AGENTCORE_STATUS_RESOURCE_LIMIT 10u
#define METASK_AGENTCORE_STATUS_SKILL_CATALOG_INVALID 11u
#define METASK_AGENTCORE_STATUS_STALE_CATALOG 12u
#define METASK_AGENTCORE_STATUS_SKILL_NOT_FOUND 13u
#define METASK_AGENTCORE_STATUS_INVALID_SKILL_ARGUMENTS 14u
#define METASK_AGENTCORE_STATUS_SKILL_POLICY_VIOLATION 15u
#define METASK_AGENTCORE_STATUS_SKILL_UNAVAILABLE 16u
#define METASK_AGENTCORE_STATUS_STALE_COMPACT 17u
#define METASK_AGENTCORE_PROVIDER_ANTHROPIC 1u
#define METASK_AGENTCORE_PROVIDER_OPENAI 2u
#define METASK_AGENTCORE_PROVIDER_GEMINI 3u
#define METASK_AGENTCORE_PERMISSION_DEFAULT 1u
#define METASK_AGENTCORE_PERMISSION_ACCEPT_EDITS 2u
#define METASK_AGENTCORE_PERMISSION_AUTO 3u
#define METASK_AGENTCORE_PERMISSION_DONT_ASK 4u
#define METASK_AGENTCORE_PERMISSION_BYPASS 5u
#define METASK_AGENTCORE_SHELL_DISABLED 1u
#define METASK_AGENTCORE_SHELL_SANDBOXED 2u
#define METASK_AGENTCORE_SHELL_UNRESTRICTED 3u
#define METASK_AGENTCORE_ABORT_USER_REQUEST 1u
#define METASK_AGENTCORE_ABORT_TIMEOUT 2u
#define METASK_AGENTCORE_STOP_END_TURN 1u
#define METASK_AGENTCORE_STOP_MAX_TURNS 2u
#define METASK_AGENTCORE_STOP_ABORTED 3u
#define METASK_AGENTCORE_STOP_TOOL_ERROR 4u
#define METASK_AGENTCORE_STOP_API_ERROR 5u
#define METASK_AGENTCORE_STOP_TOOL_LOOP 6u
#define METASK_AGENTCORE_MAX_TOOL_COUNT_V1 1024ULL
#define METASK_AGENTCORE_MAX_TOOL_SCHEMA_BYTES_V1 1048576ULL
#define METASK_AGENTCORE_MAX_TOOL_SCHEMA_DEPTH_V1 32u
#define METASK_AGENTCORE_MAX_TOOL_SCHEMA_PROPERTIES_V1 1024ULL
#define METASK_AGENTCORE_MAX_UI_RESPONSE_BYTES_V1 1048576ULL
#define METASK_AGENTCORE_MAX_HOST_TOOL_RESULT_BYTES_V1 16777216ULL
#define METASK_AGENTCORE_MAX_TOOL_ERROR_PAYLOAD_BYTES_V1 1048576ULL
#define METASK_AGENTCORE_MAX_SESSION_ID_BYTES_V1 64ULL
#define METASK_AGENTCORE_MAX_METADATA_STRING_BYTES_V1 1048576ULL
#define METASK_AGENTCORE_MAX_RUNTIME_METADATA_BYTES_V1 16777216ULL
#define METASK_AGENTCORE_MAX_SESSION_METADATA_BYTES_V1 4194304ULL
#define METASK_AGENTCORE_MAX_PROMPT_BYTES_V1 16777216ULL
#define METASK_AGENTCORE_MAX_SKILL_CATALOG_SKILLS_V1 1024ULL
#define METASK_AGENTCORE_MAX_SKILL_ARGUMENT_VALUES_V1 64ULL
#define METASK_AGENTCORE_MAX_SKILL_ARGUMENT_JSON_BYTES_V1 1048576ULL
#define METASK_AGENTCORE_MAX_PERMISSION_RULES_V1 1024ULL
#define METASK_AGENTCORE_MAX_PERMISSION_RULE_BYTES_V1 65536ULL
#define METASK_AGENTCORE_MAX_PERMISSION_RULE_TOTAL_BYTES_V1 1048576ULL
#define METASK_AGENTCORE_MAX_TURNS_V1 1000u
#define METASK_AGENTCORE_RUN_INPUT_TEXT 1u
#define METASK_AGENTCORE_RUN_INPUT_SKILL 2u
#define METASK_AGENTCORE_SKILL_SELECTION_DISABLED 1u
#define METASK_AGENTCORE_SKILL_SELECTION_ENABLED 2u
#define METASK_AGENTCORE_COMPACT_COMPACTED 1u
#define METASK_AGENTCORE_COMPACT_NO_CHANGE 2u
#define METASK_AGENTCORE_COMPACT_DEGRADED 3u
#define METASK_AGENTCORE_COMPACT_ABORTED 4u
#define METASK_AGENTCORE_EVENT_CONTINUE 0u
#define METASK_AGENTCORE_EVENT_FATAL 1u
#define METASK_AGENTCORE_UI_ANSWERED 0u
#define METASK_AGENTCORE_UI_UNAVAILABLE 1u
#define METASK_AGENTCORE_UI_FATAL 2u
#define METASK_AGENTCORE_UI_CANCELLED 3u
#define METASK_AGENTCORE_HOST_OK 0u
#define METASK_AGENTCORE_HOST_FAILED 1u
#define METASK_AGENTCORE_HOST_REJECTED 2u
#define METASK_AGENTCORE_HOST_FATAL 3u
#define METASK_AGENTCORE_CAP_RUNTIME (1ULL << 0)
#define METASK_AGENTCORE_CAP_BUILTIN_TOOLS (1ULL << 1)
#define METASK_AGENTCORE_CAP_HOST_SYNC_TOOLS (1ULL << 2)
#define METASK_AGENTCORE_CAP_HOST_UI (1ULL << 3)
#define METASK_AGENTCORE_CAP_CORE_EVENTS_JSON (1ULL << 4)
#define METASK_AGENTCORE_CAP_ABORT (1ULL << 5)
#define METASK_AGENTCORE_CAP_SKILL_CATALOG (1ULL << 6)
#define METASK_AGENTCORE_CAP_TYPED_RUN_INPUT (1ULL << 7)
#define METASK_AGENTCORE_CAP_SESSION_MODEL_MUTATION (1ULL << 8)
#define METASK_AGENTCORE_CAP_MANUAL_COMPACT (1ULL << 9)
#define METASK_AGENTCORE_CAP_SKILL_SELECTION (1ULL << 10)
#define METASK_AGENTCORE_CAP_HOST_PERMISSION_RULES (1ULL << 11)
#define METASK_AGENTCORE_REQUIRED_CAPABILITIES_V1 \
    (METASK_AGENTCORE_CAP_RUNTIME | METASK_AGENTCORE_CAP_BUILTIN_TOOLS | METASK_AGENTCORE_CAP_HOST_SYNC_TOOLS | \
     METASK_AGENTCORE_CAP_HOST_UI | METASK_AGENTCORE_CAP_CORE_EVENTS_JSON | METASK_AGENTCORE_CAP_ABORT | \
     METASK_AGENTCORE_CAP_SKILL_CATALOG | METASK_AGENTCORE_CAP_TYPED_RUN_INPUT | \
     METASK_AGENTCORE_CAP_SESSION_MODEL_MUTATION | METASK_AGENTCORE_CAP_MANUAL_COMPACT | \
     METASK_AGENTCORE_CAP_SKILL_SELECTION | METASK_AGENTCORE_CAP_HOST_PERMISSION_RULES)
/* Every revision-5 struct_size must equal sizeof(the exact type), and all
 * reserved fields must be zero. Consumers pin ABI version, revision, table
 * size, and capabilities together. V1 remains experimental and later
 * revisions may intentionally be breaking. */

typedef struct metask_agentcore_runtime metask_agentcore_runtime;
typedef struct metask_agentcore_session metask_agentcore_session;
typedef struct metask_agentcore_skill_catalog metask_agentcore_skill_catalog;
typedef struct {
    const uint8_t *ptr;
    uint64_t len;
} metask_agentcore_bytes_view_v1;
typedef struct {
    uint8_t *ptr;
    uint64_t len;
} metask_agentcore_owned_bytes_v1;
typedef struct {
    uint32_t struct_size;
    uint32_t reserved0;
    metask_agentcore_session *session;
    uint64_t run_id;
    metask_agentcore_bytes_view_v1 session_id;
    uint64_t reserved[2];
} metask_agentcore_run_context_v1;
/* The context and session_id bytes are borrowed for one callback. session is
 * the original public handle and run_id is the admitted Run. session_id is
 * non-empty, at most METASK_AGENTCORE_MAX_SESSION_ID_BYTES_V1 bytes, stable for the Session,
 * and distinct across live Sessions. Retaining it requires a deep copy; Hosts
 * must not infer pointer identity across callbacks. */

/* Canonical empty owned buffers are {NULL, 0}. A non-NULL pointer with zero
 * length is invalid because the ABI must preserve the exact release token.
 * Host callback outputs use one ownership rule independent of status:
 * {NULL, 0} is never released; every other descriptor is passed to its paired
 * Host release callback exactly once. */

/* Host owns host_ctx and keeps it valid until runtime_destroy succeeds. run,
 * run->session_id, and arguments_json are borrowed for this callback only;
 * arguments_json is the provider-produced tool-input JSON. METASK_AGENTCORE_HOST_OK consumes
 * up to METASK_AGENTCORE_MAX_HOST_TOOL_RESULT_BYTES_V1 of UTF-8 result text. METASK_AGENTCORE_HOST_FAILED
 * and METASK_AGENTCORE_HOST_REJECTED may provide the same raw amount of UTF-8 detail; after
 * JSON serialization AgentCore limits the encoded tool-error payload to
 * METASK_AGENTCORE_MAX_TOOL_ERROR_PAYLOAD_BYTES_V1. Invalid or over-cap encoded detail
 * degrades to a bounded generic business failure; an
 * invalid METASK_AGENTCORE_HOST_OK descriptor is fatal, while invalid success payload text
 * is treated as Host failure. METASK_AGENTCORE_HOST_FATAL and unknown status codes are
 * fatal. */
typedef uint32_t (*metask_agentcore_host_execute_fn_v1)(
    void *host_ctx,
    const metask_agentcore_run_context_v1 *run,
    metask_agentcore_bytes_view_v1 arguments_json,
    metask_agentcore_owned_bytes_v1 *out_result);
typedef void (*metask_agentcore_host_release_fn_v1)(
    void *host_ctx,
    metask_agentcore_owned_bytes_v1 *result);
typedef struct {
    uint32_t struct_size;
    uint32_t reserved0;
    void *ctx;
    /* "Skill" is reserved for AgentCore's Run-local projection of a bound
     * catalog and is rejected as a Host tool name. */
    metask_agentcore_bytes_view_v1 name;
    metask_agentcore_bytes_view_v1 description;
    metask_agentcore_bytes_view_v1 input_schema_json;
    metask_agentcore_host_execute_fn_v1 execute;
    metask_agentcore_host_release_fn_v1 release_result;
    uint64_t reserved[2];
} metask_agentcore_host_tool_v1;
typedef struct {
    uint32_t struct_size;
    uint32_t reserved0;
    /* Names/descriptions/schemas share METASK_AGENTCORE_MAX_RUNTIME_METADATA_BYTES_V1;
     * each text field is at most METASK_AGENTCORE_MAX_METADATA_STRING_BYTES_V1. */
    const metask_agentcore_bytes_view_v1 *builtin_tools;
    uint64_t builtin_tool_count;
    const metask_agentcore_host_tool_v1 *host_tools;
    uint64_t host_tool_count;
    uint64_t reserved[4];
} metask_agentcore_runtime_config_v1;