sdk/rust/src/raw.rs

/* automatically generated by rust-bindgen 0.72.1 */

pub const METASK_AGENTCORE_ABI_V1: u32 = 1;
pub const METASK_AGENTCORE_ABI_REVISION: u32 = 5;
pub const METASK_AGENTCORE_STATUS_OK: u32 = 0;
pub const METASK_AGENTCORE_STATUS_INVALID_ARGUMENT: u32 = 1;
pub const METASK_AGENTCORE_STATUS_OUT_OF_MEMORY: u32 = 2;
pub const METASK_AGENTCORE_STATUS_BUSY: u32 = 3;
pub const METASK_AGENTCORE_STATUS_STALE_RUN: u32 = 4;
pub const METASK_AGENTCORE_STATUS_TOO_LATE: u32 = 5;
pub const METASK_AGENTCORE_STATUS_INVALID_STATE: u32 = 6;
pub const METASK_AGENTCORE_STATUS_CORE_ERROR: u32 = 7;
pub const METASK_AGENTCORE_STATUS_CALLBACK_FAILED: u32 = 8;
pub const METASK_AGENTCORE_STATUS_INTERNAL_ERROR: u32 = 9;
pub const METASK_AGENTCORE_STATUS_RESOURCE_LIMIT: u32 = 10;
pub const METASK_AGENTCORE_STATUS_SKILL_CATALOG_INVALID: u32 = 11;
pub const METASK_AGENTCORE_STATUS_STALE_CATALOG: u32 = 12;
pub const METASK_AGENTCORE_STATUS_SKILL_NOT_FOUND: u32 = 13;
pub const METASK_AGENTCORE_STATUS_INVALID_SKILL_ARGUMENTS: u32 = 14;
pub const METASK_AGENTCORE_STATUS_SKILL_POLICY_VIOLATION: u32 = 15;
pub const METASK_AGENTCORE_STATUS_SKILL_UNAVAILABLE: u32 = 16;
pub const METASK_AGENTCORE_STATUS_STALE_COMPACT: u32 = 17;
pub const METASK_AGENTCORE_PROVIDER_ANTHROPIC: u32 = 1;
pub const METASK_AGENTCORE_PROVIDER_OPENAI: u32 = 2;
pub const METASK_AGENTCORE_PROVIDER_GEMINI: u32 = 3;
pub const METASK_AGENTCORE_PERMISSION_DEFAULT: u32 = 1;
pub const METASK_AGENTCORE_PERMISSION_ACCEPT_EDITS: u32 = 2;
pub const METASK_AGENTCORE_PERMISSION_AUTO: u32 = 3;
pub const METASK_AGENTCORE_PERMISSION_DONT_ASK: u32 = 4;
pub const METASK_AGENTCORE_PERMISSION_BYPASS: u32 = 5;
pub const METASK_AGENTCORE_SHELL_DISABLED: u32 = 1;
pub const METASK_AGENTCORE_SHELL_SANDBOXED: u32 = 2;
pub const METASK_AGENTCORE_SHELL_UNRESTRICTED: u32 = 3;
pub const METASK_AGENTCORE_ABORT_USER_REQUEST: u32 = 1;
pub const METASK_AGENTCORE_ABORT_TIMEOUT: u32 = 2;
pub const METASK_AGENTCORE_STOP_END_TURN: u32 = 1;
pub const METASK_AGENTCORE_STOP_MAX_TURNS: u32 = 2;
pub const METASK_AGENTCORE_STOP_ABORTED: u32 = 3;
pub const METASK_AGENTCORE_STOP_TOOL_ERROR: u32 = 4;
pub const METASK_AGENTCORE_STOP_API_ERROR: u32 = 5;
pub const METASK_AGENTCORE_STOP_TOOL_LOOP: u32 = 6;
pub const METASK_AGENTCORE_MAX_TOOL_COUNT_V1: u32 = 1024;
pub const METASK_AGENTCORE_MAX_TOOL_SCHEMA_BYTES_V1: u32 = 1048576;
pub const METASK_AGENTCORE_MAX_TOOL_SCHEMA_DEPTH_V1: u32 = 32;
pub const METASK_AGENTCORE_MAX_TOOL_SCHEMA_PROPERTIES_V1: u32 = 1024;
pub const METASK_AGENTCORE_MAX_UI_RESPONSE_BYTES_V1: u32 = 1048576;
pub const METASK_AGENTCORE_MAX_HOST_TOOL_RESULT_BYTES_V1: u32 = 16777216;
pub const METASK_AGENTCORE_MAX_TOOL_ERROR_PAYLOAD_BYTES_V1: u32 = 1048576;
pub const METASK_AGENTCORE_MAX_SESSION_ID_BYTES_V1: u32 = 64;
pub const METASK_AGENTCORE_MAX_METADATA_STRING_BYTES_V1: u32 = 1048576;
pub const METASK_AGENTCORE_MAX_RUNTIME_METADATA_BYTES_V1: u32 = 16777216;
pub const METASK_AGENTCORE_MAX_SESSION_METADATA_BYTES_V1: u32 = 4194304;
pub const METASK_AGENTCORE_MAX_PROMPT_BYTES_V1: u32 = 16777216;
pub const METASK_AGENTCORE_MAX_SKILL_CATALOG_SKILLS_V1: u32 = 1024;
pub const METASK_AGENTCORE_MAX_SKILL_ARGUMENT_VALUES_V1: u32 = 64;
pub const METASK_AGENTCORE_MAX_SKILL_ARGUMENT_JSON_BYTES_V1: u32 = 1048576;
pub const METASK_AGENTCORE_MAX_PERMISSION_RULES_V1: u32 = 1024;
pub const METASK_AGENTCORE_MAX_PERMISSION_RULE_BYTES_V1: u32 = 65536;
pub const METASK_AGENTCORE_MAX_PERMISSION_RULE_TOTAL_BYTES_V1: u32 = 1048576;
pub const METASK_AGENTCORE_MAX_TURNS_V1: u32 = 1000;
pub const METASK_AGENTCORE_RUN_INPUT_TEXT: u32 = 1;
pub const METASK_AGENTCORE_RUN_INPUT_SKILL: u32 = 2;
pub const METASK_AGENTCORE_SKILL_SELECTION_DISABLED: u32 = 1;
pub const METASK_AGENTCORE_SKILL_SELECTION_ENABLED: u32 = 2;
pub const METASK_AGENTCORE_COMPACT_COMPACTED: u32 = 1;
pub const METASK_AGENTCORE_COMPACT_NO_CHANGE: u32 = 2;
pub const METASK_AGENTCORE_COMPACT_DEGRADED: u32 = 3;
pub const METASK_AGENTCORE_COMPACT_ABORTED: u32 = 4;
pub const METASK_AGENTCORE_EVENT_CONTINUE: u32 = 0;
pub const METASK_AGENTCORE_EVENT_FATAL: u32 = 1;
pub const METASK_AGENTCORE_UI_ANSWERED: u32 = 0;
pub const METASK_AGENTCORE_UI_UNAVAILABLE: u32 = 1;
pub const METASK_AGENTCORE_UI_FATAL: u32 = 2;
pub const METASK_AGENTCORE_UI_CANCELLED: u32 = 3;
pub const METASK_AGENTCORE_HOST_OK: u32 = 0;
pub const METASK_AGENTCORE_HOST_FAILED: u32 = 1;
pub const METASK_AGENTCORE_HOST_REJECTED: u32 = 2;
pub const METASK_AGENTCORE_HOST_FATAL: u32 = 3;
pub const METASK_AGENTCORE_CAP_RUNTIME: u32 = 1;
pub const METASK_AGENTCORE_CAP_BUILTIN_TOOLS: u32 = 2;
pub const METASK_AGENTCORE_CAP_HOST_SYNC_TOOLS: u32 = 4;
pub const METASK_AGENTCORE_CAP_HOST_UI: u32 = 8;
pub const METASK_AGENTCORE_CAP_CORE_EVENTS_JSON: u32 = 16;
pub const METASK_AGENTCORE_CAP_ABORT: u32 = 32;
pub const METASK_AGENTCORE_CAP_SKILL_CATALOG: u32 = 64;
pub const METASK_AGENTCORE_CAP_TYPED_RUN_INPUT: u32 = 128;
pub const METASK_AGENTCORE_CAP_SESSION_MODEL_MUTATION: u32 = 256;
pub const METASK_AGENTCORE_CAP_MANUAL_COMPACT: u32 = 512;
pub const METASK_AGENTCORE_CAP_SKILL_SELECTION: u32 = 1024;
pub const METASK_AGENTCORE_CAP_HOST_PERMISSION_RULES: u32 = 2048;
pub const METASK_AGENTCORE_REQUIRED_CAPABILITIES_V1: u32 = 4095;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct metask_agentcore_runtime {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct metask_agentcore_session {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct metask_agentcore_skill_catalog {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct metask_agentcore_bytes_view_v1 {
    pub ptr: *const u8,
    pub len: u64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of metask_agentcore_bytes_view_v1"]
        [::std::mem::size_of::<metask_agentcore_bytes_view_v1>() - 16usize];
    ["Alignment of metask_agentcore_bytes_view_v1"]
        [::std::mem::align_of::<metask_agentcore_bytes_view_v1>() - 8usize];
    ["Offset of field: metask_agentcore_bytes_view_v1::ptr"]
        [::std::mem::offset_of!(metask_agentcore_bytes_view_v1, ptr) - 0usize];
    ["Offset of field: metask_agentcore_bytes_view_v1::len"]
        [::std::mem::offset_of!(metask_agentcore_bytes_view_v1, len) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct metask_agentcore_owned_bytes_v1 {
    pub ptr: *mut u8,
    pub len: u64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of metask_agentcore_owned_bytes_v1"]
        [::std::mem::size_of::<metask_agentcore_owned_bytes_v1>() - 16usize];
    ["Alignment of metask_agentcore_owned_bytes_v1"]
        [::std::mem::align_of::<metask_agentcore_owned_bytes_v1>() - 8usize];
    ["Offset of field: metask_agentcore_owned_bytes_v1::ptr"]
        [::std::mem::offset_of!(metask_agentcore_owned_bytes_v1, ptr) - 0usize];
    ["Offset of field: metask_agentcore_owned_bytes_v1::len"]
        [::std::mem::offset_of!(metask_agentcore_owned_bytes_v1, len) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct metask_agentcore_run_context_v1 {
    pub struct_size: u32,
    pub reserved0: u32,
    pub session: *mut metask_agentcore_session,
    pub run_id: u64,
    pub session_id: metask_agentcore_bytes_view_v1,
    pub reserved: [u64; 2usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of metask_agentcore_run_context_v1"]
        [::std::mem::size_of::<metask_agentcore_run_context_v1>() - 56usize];
    ["Alignment of metask_agentcore_run_context_v1"]
        [::std::mem::align_of::<metask_agentcore_run_context_v1>() - 8usize];
    ["Offset of field: metask_agentcore_run_context_v1::struct_size"]
        [::std::mem::offset_of!(metask_agentcore_run_context_v1, struct_size) - 0usize];
    ["Offset of field: metask_agentcore_run_context_v1::reserved0"]
        [::std::mem::offset_of!(metask_agentcore_run_context_v1, reserved0) - 4usize];
    ["Offset of field: metask_agentcore_run_context_v1::session"]
        [::std::mem::offset_of!(metask_agentcore_run_context_v1, session) - 8usize];
    ["Offset of field: metask_agentcore_run_context_v1::run_id"]
        [::std::mem::offset_of!(metask_agentcore_run_context_v1, run_id) - 16usize];
    ["Offset of field: metask_agentcore_run_context_v1::session_id"]
        [::std::mem::offset_of!(metask_agentcore_run_context_v1, session_id) - 24usize];
    ["Offset of field: metask_agentcore_run_context_v1::reserved"]
        [::std::mem::offset_of!(metask_agentcore_run_context_v1, reserved) - 40usize];
};
pub type metask_agentcore_host_execute_fn_v1 = ::std::option::Option<
    unsafe extern "C" fn(
        host_ctx: *mut ::std::os::raw::c_void,
        run: *const metask_agentcore_run_context_v1,
        arguments_json: metask_agentcore_bytes_view_v1,
        out_result: *mut metask_agentcore_owned_bytes_v1,
    ) -> u32,
>;
pub type metask_agentcore_host_release_fn_v1 = ::std::option::Option<
    unsafe extern "C" fn(
        host_ctx: *mut ::std::os::raw::c_void,
        result: *mut metask_agentcore_owned_bytes_v1,
    ),
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct metask_agentcore_host_tool_v1 {
    pub struct_size: u32,
    pub reserved0: u32,
    pub ctx: *mut ::std::os::raw::c_void,
    pub name: metask_agentcore_bytes_view_v1,
    pub description: metask_agentcore_bytes_view_v1,
    pub input_schema_json: metask_agentcore_bytes_view_v1,
    pub execute: metask_agentcore_host_execute_fn_v1,
    pub release_result: metask_agentcore_host_release_fn_v1,
    pub reserved: [u64; 2usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of metask_agentcore_host_tool_v1"]
        [::std::mem::size_of::<metask_agentcore_host_tool_v1>() - 96usize];
    ["Alignment of metask_agentcore_host_tool_v1"]
        [::std::mem::align_of::<metask_agentcore_host_tool_v1>() - 8usize];
    ["Offset of field: metask_agentcore_host_tool_v1::struct_size"]
        [::std::mem::offset_of!(metask_agentcore_host_tool_v1, struct_size) - 0usize];
    ["Offset of field: metask_agentcore_host_tool_v1::reserved0"]
        [::std::mem::offset_of!(metask_agentcore_host_tool_v1, reserved0) - 4usize];
    ["Offset of field: metask_agentcore_host_tool_v1::ctx"]
        [::std::mem::offset_of!(metask_agentcore_host_tool_v1, ctx) - 8usize];
    ["Offset of field: metask_agentcore_host_tool_v1::name"]
        [::std::mem::offset_of!(metask_agentcore_host_tool_v1, name) - 16usize];
    ["Offset of field: metask_agentcore_host_tool_v1::description"]
        [::std::mem::offset_of!(metask_agentcore_host_tool_v1, description) - 32usize];
    ["Offset of field: metask_agentcore_host_tool_v1::input_schema_json"]
        [::std::mem::offset_of!(metask_agentcore_host_tool_v1, input_schema_json) - 48usize];
    ["Offset of field: metask_agentcore_host_tool_v1::execute"]
        [::std::mem::offset_of!(metask_agentcore_host_tool_v1, execute) - 64usize];
    ["Offset of field: metask_agentcore_host_tool_v1::release_result"]
        [::std::mem::offset_of!(metask_agentcore_host_tool_v1, release_result) - 72usize];
    ["Offset of field: metask_agentcore_host_tool_v1::reserved"]
        [::std::mem::offset_of!(metask_agentcore_host_tool_v1, reserved) - 80usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct metask_agentcore_runtime_config_v1 {
    pub struct_size: u32,
    pub reserved0: u32,
    pub builtin_tools: *const metask_agentcore_bytes_view_v1,
    pub builtin_tool_count: u64,
    pub host_tools: *const metask_agentcore_host_tool_v1,
    pub host_tool_count: u64,
    pub reserved: [u64; 4usize],
}
